--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   supabase_flutter: ^2.8.1
+  bcrypt: ^1.1.3
+  flutter_secure_storage: ^9.0.0
+  device_info_plus: ^11.0.0
+  http: ^1.2.2
+  fk_user_agent: ^2.1.0
 
 dev_dependencies:
   flutter_test:
