--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   device_info_plus: ^11.0.0
   http: ^1.2.2
   fk_user_agent: ^2.1.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
